--- a/src/index.css
+++ b/src/index.css
@@ -77,11 +77,11 @@ button {
   padding: 2px;
   font-size: 20px;
   border-width: 1px;
-  border-color: #CCCCCC;
-  background-color:transparent;
+  border-color: #51b4e8;
+  background-color:#6abfedad;
   color: #ffffff;
   border-style: solid;
-  border-radius: 18px;
+  border-radius: 8px;
   box-shadow: 0px 0px 5px rgba(66,66,66,.75);
   text-align: center;
   
