--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,14 @@ body {
   
 }
 
-.clouds-loader{
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.img .clouds-loader{
 
   width: 100 px;
   height: 100 px;
@@ -60,6 +67,12 @@ body {
   flex-direction: column;
 }
 
+.content-city{
+
+  display: flex;
+  align-items: center;
+}
+
 button {
   box-shadow: 5px 5px 3px 0px rgba(0,0,0,0.25);
   font-style: 20px;
@@ -72,6 +85,13 @@ button {
   color: #ffffff;
   border: transparent;
 }
+.search-button{
+  
+  background: transparent;
+  width: 30px;
+  height:30px;
+
+}
 
 .search-city {
   padding: 2px;
@@ -82,10 +102,35 @@ button {
   color: #ffffff;
   border-style: solid;
   border-radius: 8px;
-  box-shadow: 0px 0px 5px rgba(66,66,66,.75);
+  box-shadow: 0px 0px 2px rgba(66,66,66,.75);
   text-align: center;
+  width: 250px;
+  height:30px;
   
 }
-.search-city:focus {
-  outline:none;
+
+
+.bx {
+  font-family: boxicons!important;
+  font-weight: 800;
+  font-style: normal;
+  font-variant: normal;
+  line-height: 1;
+  text-rendering: auto;
+  display: inline-block;
+  text-transform: none;
+  speak: none;
+  -webkit-font-smoothing: antialiased;
+
+
+input {
+    display: flex;
+    border: none;
+    
+    height: 30%;
+    
+    padding-inline-start: 52px;
+   
+    width: 100%;
 }
+
