--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,6 @@ img {
 .card-information {
   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   background-color: #d5f3ff;
- 
   border-radius: 50px;
   display: flex;
   justify-content: center;
@@ -125,17 +124,21 @@ button {
 }
   
 input {
+    width: 100%;
+    height: 30%;
     display: flex;
     border: none;
-    
-    height: 30%;
-    
     padding-inline-start: 52px;
    
-    width: 100%;
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: white;
   opacity: 5; /* Firefox */
+}
+
+.card-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
