--- a/src/index.css
+++ b/src/index.css
@@ -18,15 +18,15 @@ body {
 }
 
 .loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #d5f3ff  0%, #51b4e8  100%;
   width: 100%;
   height: 100vh;
   position: fixed;
   top: 0;
   right: 0;
-  display: table-column;
-  align-items: center;
-  justify-content: center;
   
 }
 
@@ -37,10 +37,11 @@ img {
   width: 50%;
 }
 
-.img .clouds-loader{
-
-  width: 100 px;
-  height: 100 px;
+.clouds-loader {
+  
+  width: 50 px;
+  height: 50 px;
+  flex-direction: column;
 }
 
 .App {
@@ -142,3 +143,54 @@ input {
   justify-content: center;
   align-items: center;
 }
+
+
+
+.spinner {
+   width: 11.2px;
+   height: 11.2px;
+   animation: spinner-o824ag 1s infinite linear;
+}
+
+.spinner div {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   background: #ffffff;
+   border-radius: 50%;
+   animation: spinner-vse6n7 1.25s infinite ease;
+}
+
+.spinner div:nth-child(1) {
+   --rotation: 90;
+}
+
+.spinner div:nth-child(2) {
+   --rotation: 180;
+}
+
+.spinner div:nth-child(3) {
+   --rotation: 270;
+}
+
+.spinner div:nth-child(4) {
+   --rotation: 360;
+}
+
+@keyframes spinner-vse6n7 {
+   0%, 100% {
+      transform: rotate(calc(var(--rotation) * 1deg)) translateY(0);
+   }
+
+   50% {
+      transform: rotate(calc(var(--rotation) * 1deg)) translateY(300%);
+   }
+}
+
+@keyframes spinner-o824ag {
+   to {
+      transform: rotate(360deg);
+   }
+}
+
+
